# gitzeug

./: .gitignore  Cargo.toml  README.md  flake.nix  result  shell.nix
src/: git.rs  main.rs  model.rs  utils.rs
