[package]
name = "gitzeug"
version = "0.4.0"
edition = "2024"
description = "A CLI toolkit for streamlined git operations."


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive", "cargo"] }
dirs = "6.0.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
toml = "0.8.23"
